fixed contrast errorrs

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -376,8 +376,8 @@ td, th{
 }
 
 th{
-    background-color: gray;
-    color:white;
+    background-color: #D09E16;
+    color: #000;
     height: auto;
 }
 
